yosys (0.6-1) UNRELEASED; urgency=medium

  * New upstream release: 0.6 (5869d26)
    - 01_gitrevision.patch: refresh
    - spelling-fixes.patch: fix upstream spelling mistakes
  * debian/rules:
    - don't run make as part of dh_auto_configure, it'll get run by
        dh_auto_build later
    - enable parallel build

 -- Sebastian Kuzminsky <seb@highlab.com>  Sun, 28 Feb 2016 10:48:44 -0700

yosys (0.5.0+20151013gitf13e387-2~exp1) experimental; urgency=low

  * Added autopkg test for synthesis for iCE FPGA.
  * Updated standards to 3.9.7 - no needed changes

 -- Ruben Undheim <ruben.undheim@gmail.com>  Sun, 21 Feb 2016 12:21:37 +0100

yosys (0.5.0+20151013gitf13e387-1) unstable; urgency=low

  * Uploaded to unstable
    - New features in yosys are needed for the Icestorm tool chain
  * New upstream version
    - Drop patches 04_installpath.patch and 06_cflags_ldflags.patch
    - Set PREFIX in d/rules
  * debian/control: Fixed Vcs-Git to use https

 -- Ruben Undheim <ruben.undheim@gmail.com>  Sun, 07 Feb 2016 11:59:04 +0100

yosys (0.5.0+20151007gitba4cce9-1) experimental; urgency=low

  * New upstream version 
    - Refreshed patches
  * debian/control: Added "python3" as build-dependency

 -- Ruben Undheim <ruben.undheim@gmail.com>  Sat, 10 Oct 2015 09:21:17 +0200

yosys (0.5.0-1) unstable; urgency=low

  * New upstream release
  * Added d/watch
  * Updated copyright years in d/copyright
  * Changed dependency from tcl8.5-dev to tcl-dev
  * Added d/gbp.conf
  * Added link from /usr/bin/yosys-abc to /usr/bin/berkeley-abc
    - Also added man page for yosys-abc
  * Fixed paths returned by yosys-config
    - fix included in 04_installpath.patch

 -- Ruben Undheim <ruben.undheim@gmail.com>  Mon, 09 Feb 2015 20:37:38 +0100

yosys (0.4.0-1) unstable; urgency=medium

  * New upstream release
  * Few fixes in d/copyright
  * Removed some strictly not needed dependencies

 -- Ruben Undheim <ruben.undheim@gmail.com>  Wed, 12 Nov 2014 18:35:59 +0100
