@@ -12,6 +12,7 @@ Build-Depends: debhelper (>= 9),
                gawk,
                libffi-dev,
                pkg-config,
+               txt2man,
                python3
 Standards-Version: 3.9.7
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-science/packages/yosys.git
